<resources>
    <string name="app_name">CathayZooDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">台北市立動物園</string>
    <string name="area_link_btn">在網頁開啟</string>
    <string name="plant_test_text">this is plant</string>

    <string name="plant_known_title_text">別名</string>
    <string name="plant_brief_title_text">簡介</string>
    <string name="plant_feature_title_text">辨認方式</string>
    <string name="plant_function_title_text">功能性</string>
    <string name="plant_update_title_text">最後更新</string>

    <string name="zoo_plant_api">"https://data.taipei/api/v1/dataset/f18de02f-b6c9-47c0-8cda-50efad621c14"</string>
</resources>