<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.plant.PlantFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.ysc.cathayzoodemo.ui.plant.PlantViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/plant_img"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:imageFromUrl="@{viewModel.plant.img_url}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:id="@+id/plant_text_name_ch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{viewModel.plant.name_ch}"/>
                <TextView
                    android:id="@+id/plant_text_name_latin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.plant.name_latin}"/>
                <TextView
                    android:id="@+id/plant_text_known_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/plant_known_title_text"/>
                <TextView
                    android:id="@+id/plant_text_known"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.plant.known}"/>
                <TextView
                    android:id="@+id/plant_text_brief_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/plant_brief_title_text"/>
                <TextView
                    android:id="@+id/plant_text_brief"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.plant.brief}"/>
                <TextView
                    android:id="@+id/plant_text_feature_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/plant_feature_title_text"/>
                <TextView
                    android:id="@+id/plant_text_feature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.plant.feature}"/>
                <TextView
                    android:id="@+id/plant_text_function_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/plant_function_title_text"/>
                <TextView
                    android:id="@+id/plant_text_function"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.plant.function}"/>
                <TextView
                    android:id="@+id/plant_text_update_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/plant_update_title_text"/>
                <TextView
                    android:id="@+id/plant_text_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.plant.update}"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>